fix for SGT-21 Chapter 3 - Task 3 (Create App) - Step 3: The Choose a Report drop down isn't integrated into the image properly (it's too big & overlaps other elements)

--- a/src/app/3-build-your-app/styles/_3-create-an-app-from-base-and-custom-lightning-components.scss
+++ b/src/app/3-build-your-app/styles/_3-create-an-app-from-base-and-custom-lightning-components.scss
@@ -47,7 +47,32 @@
       left: 262px;
     }
   }
+  
+  .step-2, .step-3 {
 
+    .control-group {
+      margin-bottom:0;
+    }
+
+    .report-chart-label {
+      position: absolute;
+      left: 567px;
+      top: 142px;
+      width: 210px !important;
+      opacity: 1;
+      font-size: 10px;
+      border-radius:5px;
+    }
+    .report-chart-dropdown {
+      position: absolute;
+      right: 10px;
+      top: 213px;
+      opacity: 1;
+      width: 210px;
+      font-size: 10px;
+      border-radius:5px;
+    }
+  }
   .step-4 {
     .chatter-feed-drag {
       position: absolute;
